--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.header {
+  position: fixed;
+  left: 10%;
+  right: 10%;
+  padding-top: 30px;
+  background-color: #fff;
+  z-index: 20;
+}
+.userlist {
+  padding-top: 150px;
+  z-index: 10;
+}
 .centered {
   text-align: center;
   margin-bottom: 15px;
