--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  top: 50px;
   left: 10%;
   right: 10%;
   padding-top: 30px;
@@ -7,7 +8,7 @@
   z-index: 20;
 }
 .userlist {
-  padding-top: 150px;
+  padding-top: 200px;
   z-index: 10;
 }
 .centered {
